# conc-map-bench

./: Cargo.toml  README.md  collect-data.sh  data.csv  rust-toolchain.toml
benches/: insert_heavy.rs  read_heavy.rs  update_heavy.rs
results/: Exchange.ahash.csv  Exchange.foldhash.csv  Exchange.fx.csv  Exchange.std.csv  RapidGrow.ahash.csv  RapidGrow.foldhash.csv  RapidGrow.fx.csv  RapidGrow.std.csv  ReadHeavy.ahash.csv  ReadHeavy.foldhash.csv  ReadHeavy.fx.csv  ReadHeavy.std.csv
results-2021-12-12/: Exchange.fx.csv  Exchange.std.csv  RapidGrow.fx.csv  ReadHeavy.fx.csv  ReadHeavy.std.csv
scripts/: bench.bash  plot.bash
src/: adapters.rs  bench.rs  lib.rs  main.rs  plot.rs  record.rs  workloads.rs
src/adapters/: btreemap.rs  chashmap.rs  contrie.rs  crossbeam_skiplist.rs  dashmap.rs  dashmap_next.rs  evmap.rs  flurry.rs  mod.rs  papaya.rs  scc.rs  std.rs
