[package]
name = "conc-map-bench"
version = "0.1.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
#bustle = { git = "https://github.com/loyd/bustle" }
bustle = { path = "../bustle" }
tracing-subscriber = "0.2.11"
num_cpus = "1.13.0"
fxhash = "0.2.1"
chashmap = "2.2.2"
contrie = "0.1.4"
flurry = "0.3.1"
dashmap = "=4.0.0-rc6"
crossbeam-epoch = "0.8"
crossbeam-epoch-old = { package = "crossbeam-epoch", version = "0.7" }
snmalloc-rs = "0.2.18"
parking_lot = "0.11.1"
evmap = "10.0.2"
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam", path = "crossbeam-skiplist" }
structopt = "0.3.21"
json = "0.12.4"
csv = "1.1.5"
serde = { version = "1.0.123", features = ["derive"] }

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
