[package]
name = "conc-map-bench"
version = "0.1.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
bustle = "0.4.2"
tracing-subscriber = "0.3.3"
num_cpus = "1.13.0"
fxhash = "0.2.1"
chashmap = "2.2.2"
contrie = "0.1.4"
flurry = "0.4.0"
dashmap = "5.0.0"
crossbeam-epoch = { version = "0.9.5", package = "crossbeam-epoch" }
parking_lot = "0.11.2"
evmap = "10.0.2"
seize = "0.2.1"
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam" }
structopt = "0.3.25"
json = "0.12.4"
csv = "1.1.6"
serde = { version = "1.0.131", features = ["derive"] }
plotters = "0.3.1"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
